2005-04-07  Matthias Wimmer  <m@tthias.net>

    * clients.c: implemented STARTTLS
    * jadc2s.c: same
    * jadc2s.h: same

2004-10-09  Matthias Wimmer  <m@tthias.net>

    * clients.c: Fixing problem reported by Pablo Herrero

2004-09-07  Matthias Wimmer  <m@tthias.net>

    * xmlparse/*: removed expat sources from jadc2s and link against libexpat
    * configure.in: same
    * jadc2s.h: same
    * Makefile.am: same
    * util/config.c: same
    * util/util.h: make some function arguments constant

2004-09-03  Matthias Wimmer  <m@tthias.net>

    * util/util.c: jid_environment has do be defined even without libidn

2004-09-01  Matthias Wimmer  <m@tthias.net>

    * util/pool.c: Remove pmalloc_x, we don't use it
    * util/util.c: same

2004-07-15  Matthias Wimmer  <m@tthias.net>

    * README.maintainer: Reminder not to generate broken distributions
    * clients.c: Cache stringprep results
    * conn.c: same
    * connect.c: same
    * jadc2s.c: same
    * jadc2s.h: same
    * util/jid.c: same
    * util/util.h: same
    * configure.in: Use pkg-config to check for openssl
    * ac-helpers/Makefile.am: same

2004-04-13  Matthias Wimmer  <m@tthias.net>

    * clients.c: Make the flash hack optional, general cleanup
    * configure.in: same
    * conn.c: same
    * connect.c: same
    * jadc2s.h: same

2004-04-04  Matthias Wimmer  <m@tthias.net>

    * clients.c: Optional autodetection if SSL/TLS is used on port 5223
    * conn.c: same
    * jadc2s.c: same
    * jadc2s.h: same
    * jadc2s.xml.dist: same
    * connect.c: Removed debugging messages

2004-03-30  Matthias Wimmer  <m@tthias.net>

    * util/jid.c: Minimize the number of necessary stringprep calls
    * conn.c: Removing debugging information used to find a now fixed bug
    * connect.c: same
    * jadc2s.c: same
    * jadc2s.h: same

2004-03-29  Matthias Wimmer  <m@tthias.net>

    * configure.in: Check for Libidn
    * util/jid.c: Nameprep/nodeprep/resourceprep JIDs