@@ -1,7 +1,7 @@
 AC_PREREQ(2.50)
 
 AC_INIT(util/util.h)
-AM_INIT_AUTOMAKE(jadc2s,0.9.1-beta-20050407)
+AM_INIT_AUTOMAKE(jadc2s,0.9.1-beta-20051101)
 AM_CONFIG_HEADER(config.h)
 
 dnl helper macros
