@@ -1,3 +1,8 @@
+2005-11-01  Matthias Wimmer  <m@tthias.net>
+
+    * mio/mio.c: changing typecast for accept() call to fix a compiler warning
+    * clients.c: fixing memory leak, fixing STARTTLS not to send an error back
+
 2005-04-07  Matthias Wimmer  <m@tthias.net>
 
     * clients.c: implemented STARTTLS
